# flask-template

./: cookiecutter.json
{{cookiecutter.project_name}}/: .env  .env.example  .envrc  .gitignore  pyproject.toml
{{cookiecutter.project_name}}/alembic/: env.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: __init__.py  db.py  models.py  routes.py  teardown.py
